--- a/Views/Employees/Details.cshtml
+++ b/Views/Employees/Details.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EmployeeName)
+            @Html.DisplayNameFor(model => model.UserName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EmployeeName)
+            @Html.DisplayFor(model => model.UserName)
         </dd>
 
     </dl>
