--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -10,6 +10,14 @@
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
+
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+        </div>
+    </div>
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -30,20 +38,39 @@
         </div>
     </div>
     <!--Select the Role Type for the User-->
-    <div class="form-group">
-        @Html.Label("User Type", new { @class = "col-md-2 control-label" })
+  <div class="form-group">
+        @Html.LabelFor(model => model.Roles, "Role", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("Name")
-        </div>
-    </div>
-    <!--Ends Here-->
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
-}
+           
+            @Html.DropDownList("Roles", (IEnumerable<SelectListItem>)ViewBag.Roles, "Select", htmlAttributes: new { @class = "form-control" })
+        @*@Html.DropDownListFor(model => model.Roles, null)*@
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+            @*@Html.DropDownList("Roles", (IEnumerable<SelectListItem>)ViewBag.Roles)*@
+
+
+        </div>
+    </div>  
+    <div class="form-group">
+        @Html.LabelFor(model => model.Departments, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @*@Html.DropDownList("Departments", null, htmlAttributes: new { @class = "form-control" })*@
+            @Html.DropDownList("DepartmentId", (IEnumerable<SelectListItem>)ViewBag.Departments, "Select", htmlAttributes: new { @class = "form-control" })
+
+
+
+
+        </div>
+    </div>
+
+    <!--Ends Here-->
+
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" class="btn btn-default" value="Register" />
+
+    </div>
+
+    }
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
