--- a/Views/Employees/Delete.cshtml
+++ b/Views/Employees/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model DeptEmpMgmt.Models.Employee
+﻿@*@model DeptEmpMgmt.Models.Employee*@
+@model DeptEmpMgmt.Models.ApplicationUser
 
 @{
     ViewBag.Title = "Delete";
@@ -13,19 +14,21 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Department.DepartmentName)
+            @*@Html.DisplayNameFor(model => model.Department.DepartmentName)*@
+            @Html.DisplayNameFor(model => model.Departments.DepartmentName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Department.DepartmentName)
+            @*@Html.DisplayFor(model => model.Department.DepartmentName)*@
+            @Html.DisplayNameFor(model => model.Departments.DepartmentName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EmployeeName)
+            @Html.DisplayNameFor(model => model.UserName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EmployeeName)
+            @Html.DisplayFor(model => model.UserName)
         </dd>
 
     </dl>
