--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -3,28 +3,17 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Available Roles For Application</h2>
+<h2>Roles Listing </h2>
 
-@Html.ActionLink("Create Role", "Create", "Role")
-
-<style type="text/css">
-    #tbrole, .c {
-        border: double;
-    }
-</style>
-
-<table id="tbrole">
-    <tr>
-        <td class="c">
-            Role Name
-        </td>
-    </tr>
-    @foreach (var item in Model)
+@Html.ActionLink("Create New Role", "Create") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
+<hr />
+<div>
+    @foreach (var role in Model)
     {
-        <tr>
-            <td class="c">
-                @item.Name
-            </td>
-        </tr>
+        <p>
+            <strong>@role.Name | </strong>
+            <span onclick="return confirm('Are you sure to delete?')"><a href="/Roles/Delete?RoleName=@role.Name" class="delLink" style="color:red;">Delete</a></span> |
+            @Html.ActionLink("Edit", "Edit", new { roleName = @role.Name })
+        </p>
     }
-</table>
+</div>
