--- a/Views/Employees/Delete.cshtml
+++ b/Views/Employees/Delete.cshtml
@@ -15,12 +15,12 @@
     <dl class="dl-horizontal">
         <dt>
             @*@Html.DisplayNameFor(model => model.Department.DepartmentName)*@
-            @Html.DisplayNameFor(model => model.Departments.DepartmentName)
+            @Html.DisplayNameFor(model => model.Department.DepartmentName)
         </dt>
 
         <dd>
             @*@Html.DisplayFor(model => model.Department.DepartmentName)*@
-            @Html.DisplayNameFor(model => model.Departments.DepartmentName)
+            @Html.DisplayNameFor(model => model.Department.DepartmentName)
         </dd>
 
         <dt>
