--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -5,28 +5,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Users</h2>
 
 
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Departments.DepartmentName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
+       
+        
+        <th>User Name</th>
+       
+        <th>Department</th>
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-            <td>
-                    @Html.DisplayFor(modelItem => item.Departments.DepartmentName)
-                </td>
+           
+           
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+           
+            <td>
+                @Html.DisplayFor(modelItem => item.DepartmentId)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
@@ -34,6 +36,6 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
-    }
 
+    }
 </table>
