--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,10 +2,27 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Employee </h1>
-    <h1> Management</h1>
-  
-   
-</div>
+@using (Html.BeginForm())
+{
+    @Html.ValidationSummary(true)
 
+    if (TempData["SuccessPwd"] != null)
+    {
+        <div class="text-success">
+            <h3>Registration Successful. Password Sent!</h3>
+        </div>
+    }
+
+    if (TempData["SuccessMsg"] != null)
+    {
+        <div class="text-success">
+            <h3>Your Password is changed.</h3>
+        </div>
+    }
+
+    <div class="jumbotron">
+        <h1>Employee </h1>
+        <h1> Management</h1>
+
+    </div>
+}
