--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         {
                            <li>@Html.ActionLink("CreateRole", "Index", "Role")</li>
                             <li>@Html.ActionLink("CreateDept", "Create", "Departments")</li>
-                            <li>@Html.ActionLink("CreateUser", "CreateEmployee", "Account")</li>
+                            @*<li>@Html.ActionLink("CreateUser", "CreateEmployee", "Account")</li>*@
                             <li>@Html.ActionLink("Register", "Register", "Account")</li>
                         }
 
