Some discrepancies in DepartmentId, Name

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,12 +27,12 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("ViewDept", "Index", "Departments")</li>
-                        <li>@Html.ActionLink("ViewEmp", "Index", "Employees")</li>
+                        <li>@Html.ActionLink("ViewEmp", "Index", "Account")</li>
                         if (User.IsInRole("Admin"))
                         {
                            <li>@Html.ActionLink("CreateRole", "Index", "Role")</li>
                             <li>@Html.ActionLink("CreateDept", "Create", "Departments")</li>
-                            @*<li>@Html.ActionLink("CreateUser", "CreateEmployee", "Account")</li>*@
+                            <li>@Html.ActionLink("CreateUser", "CreateEmployee", "Account")</li>
                             <li>@Html.ActionLink("Register", "Register", "Account")</li>
                         }
 
