--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -5,28 +5,27 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Users</h2>
+<h2>Index</h2>
 
 
 <table class="table">
     <tr>
-       
-        
-        <th>User Name</th>
-       
-        <th>Department</th>
+        <th>
+            @Html.DisplayNameFor(model => model.UserName)
+        </th>
+        <th>
+
+            @Html.DisplayNameFor(model => model.Department.DepartmentName)
+        </th>
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-           
-           
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
-           
             <td>
                 @Html.DisplayFor(modelItem => item.Department.DepartmentName)
             </td>
@@ -36,6 +35,6 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
-
     }
+
 </table>
