--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -33,14 +33,14 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.Department, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("DepartmentId", (IEnumerable<SelectListItem>)ViewBag.Departments, "Select", htmlAttributes: new { @class = "form-control" })
         </div>
     </div>
 
     <div class="col-md-offset-2 col-md-10">
-        <input type="submit" class="btn btn-default" value="Register" />
+        <input type="submit" class="btn btn-default" value="Send Password" />
 
     </div>
 }
